package eapli.base.order.repositories;

public class OrderRepository {
}
